force-app/main/default/objects/Scene_Set__c/Scene_Set__c.object-meta.xml
<CustomObject>
    <label>Scene-Set</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Scene-Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scene-Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>