force-app/main/default/objects/Scene_Set__c/fields/Scene__c.field-meta.xml
<CustomField>
    <fullName>Scene__c</fullName>
    <label>Scene</label>
    <referenceTo>Scene__c</referenceTo>
    <relationshipLabel>Scene-Sets</relationshipLabel>
    <relationshipName>Scene_Sets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>