force-app/main/default/objects/Scene_Set__c/fields/Set__c.field-meta.xml
<CustomField>
    <fullName>Set__c</fullName>
    <label>Set</label>
    <referenceTo>Set__c</referenceTo>
    <relationshipLabel>Scene-Sets</relationshipLabel>
    <relationshipName>Scene_Sets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>