force-app/main/default/objects/Scene_Set__c/fields/SHOOT_LOCATION__c.field-meta.xml
<CustomField>
    <fullName>SHOOT_LOCATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SHOOT LOCATION</label>
    <referenceTo>SHOOT_LOCATION__c</referenceTo>
    <relationshipLabel>Scene-Sets</relationshipLabel>
    <relationshipName>Scene_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>